Add sicikit learn

--- a/sales_analysis.ipynb
+++ b/sales_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "8d1832a2",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "d5914cbe",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
        "4  Los Angeles  (CA)  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "id": "f6439be0",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
        "4  Los Angeles  (CA)   11.99  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "id": "93d5131b",
    "metadata": {},
    "outputs": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "id": "216747af",
    "metadata": {},
    "outputs": [],
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "id": "892e9efc",
    "metadata": {},
    "outputs": [
@@ -366,7 +366,7 @@
        " 'Portland  (ME)']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "id": "998f06cc",
    "metadata": {},
    "outputs": [],
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "id": "31599615",
    "metadata": {},
    "outputs": [],
@@ -405,14 +405,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "id": "ab5a7fd7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67d6e7b88a054569b9842f2ea38a18a8",
+       "model_id": "ef051e8527a7473a93b976ee1c2dc351",
        "version_major": 2,
        "version_minor": 0
       },
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "id": "9f734366",
    "metadata": {},
    "outputs": [
@@ -440,7 +440,7 @@
        "'Dallas  (TX)'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "id": "32f7ba71",
    "metadata": {},
    "outputs": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "id": "a4790eb3",
    "metadata": {
     "scrolled": false
@@ -503,7 +503,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2cc55452fc854ccc821b740ecec938f5",
+       "model_id": "3503101726274780843b2f88817bc665",
        "version_major": 2,
        "version_minor": 0
       },
@@ -538,6 +538,347 @@
     "output.layout.height = '350px'\n",
     "    \n",
     "interactive_plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "7471bb78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn import metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "94f04a53",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Price Each</th>\n",
+       "      <th>Quantity Ordered</th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>Meta</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Product</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>20in Monitor</th>\n",
+       "      <td>451068.99</td>\n",
+       "      <td>4129</td>\n",
+       "      <td>1.862464e+09</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27in 4K Gaming Monitor</th>\n",
+       "      <td>2429637.70</td>\n",
+       "      <td>6244</td>\n",
+       "      <td>1.517066e+10</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27in FHD Monitor</th>\n",
+       "      <td>1125974.93</td>\n",
+       "      <td>7550</td>\n",
+       "      <td>8.501111e+09</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34in Ultrawide Monitor</th>\n",
+       "      <td>2348718.19</td>\n",
+       "      <td>6199</td>\n",
+       "      <td>1.455970e+10</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AA Batteries (4-pack)</th>\n",
+       "      <td>79015.68</td>\n",
+       "      <td>27635</td>\n",
+       "      <td>2.183598e+09</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AAA Batteries (4-pack)</th>\n",
+       "      <td>61716.59</td>\n",
+       "      <td>31017</td>\n",
+       "      <td>1.914263e+09</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Apple Airpods Headphones</th>\n",
+       "      <td>2332350.00</td>\n",
+       "      <td>15661</td>\n",
+       "      <td>3.652693e+10</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bose SoundSport Headphones</th>\n",
+       "      <td>1332366.75</td>\n",
+       "      <td>13457</td>\n",
+       "      <td>1.792966e+10</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Flatscreen TV</th>\n",
+       "      <td>1440000.00</td>\n",
+       "      <td>4819</td>\n",
+       "      <td>6.939360e+09</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Google Phone</th>\n",
+       "      <td>3315000.00</td>\n",
+       "      <td>5532</td>\n",
+       "      <td>1.833858e+10</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LG Dryer</th>\n",
+       "      <td>387600.00</td>\n",
+       "      <td>646</td>\n",
+       "      <td>2.503896e+08</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LG Washing Machine</th>\n",
+       "      <td>399600.00</td>\n",
+       "      <td>666</td>\n",
+       "      <td>2.661336e+08</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Lightning Charging Cable</th>\n",
+       "      <td>323787.10</td>\n",
+       "      <td>23217</td>\n",
+       "      <td>7.517365e+09</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Macbook Pro Laptop</th>\n",
+       "      <td>8030800.00</td>\n",
+       "      <td>4728</td>\n",
+       "      <td>3.796962e+10</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ThinkPad Laptop</th>\n",
+       "      <td>4127958.72</td>\n",
+       "      <td>4130</td>\n",
+       "      <td>1.704847e+10</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>USB-C Charging Cable</th>\n",
+       "      <td>261740.85</td>\n",
+       "      <td>23975</td>\n",
+       "      <td>6.275237e+09</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vareebadd Phone</th>\n",
+       "      <td>826000.00</td>\n",
+       "      <td>2068</td>\n",
+       "      <td>1.708168e+09</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wired Headphones</th>\n",
+       "      <td>226395.18</td>\n",
+       "      <td>20557</td>\n",
+       "      <td>4.654006e+09</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>iPhone</th>\n",
+       "      <td>4789400.00</td>\n",
+       "      <td>6849</td>\n",
+       "      <td>3.280260e+10</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            Price Each  Quantity Ordered         Sales Meta\n",
+       "Product                                                                    \n",
+       "20in Monitor                 451068.99              4129  1.862464e+09    1\n",
+       "27in 4K Gaming Monitor      2429637.70              6244  1.517066e+10    1\n",
+       "27in FHD Monitor            1125974.93              7550  8.501111e+09    1\n",
+       "34in Ultrawide Monitor      2348718.19              6199  1.455970e+10    1\n",
+       "AA Batteries (4-pack)         79015.68             27635  2.183598e+09    1\n",
+       "AAA Batteries (4-pack)        61716.59             31017  1.914263e+09    1\n",
+       "Apple Airpods Headphones    2332350.00             15661  3.652693e+10    1\n",
+       "Bose SoundSport Headphones  1332366.75             13457  1.792966e+10    1\n",
+       "Flatscreen TV               1440000.00              4819  6.939360e+09    1\n",
+       "Google Phone                3315000.00              5532  1.833858e+10    1\n",
+       "LG Dryer                     387600.00               646  2.503896e+08    0\n",
+       "LG Washing Machine           399600.00               666  2.661336e+08    0\n",
+       "Lightning Charging Cable     323787.10             23217  7.517365e+09    1\n",
+       "Macbook Pro Laptop          8030800.00              4728  3.796962e+10    1\n",
+       "ThinkPad Laptop             4127958.72              4130  1.704847e+10    1\n",
+       "USB-C Charging Cable         261740.85             23975  6.275237e+09    1\n",
+       "Vareebadd Phone              826000.00              2068  1.708168e+09    1\n",
+       "Wired Headphones             226395.18             20557  4.654006e+09    1\n",
+       "iPhone                      4789400.00              6849  3.280260e+10    1"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filter = ['Product','Price Each','Quantity Ordered']\n",
+    "dt = df.filter(items= filter)\n",
+    "prod = dt.groupby(['Product']).sum()\n",
+    "prod['Sales'] = prod['Quantity Ordered'] * prod['Price Each']\n",
+    "prod.loc[prod['Quantity Ordered'] < 1000, 'Meta'] = '0'\n",
+    "prod.loc[prod['Quantity Ordered'] > 1000, 'Meta'] = '1'\n",
+    "prod"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29ac8ec0",
+   "metadata": {},
+   "source": [
+    "### Previsão de meta de vendas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "d741594b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Meta</th>\n",
+       "      <th>Pred</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Product</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Flatscreen TV</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Apple Airpods Headphones</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20in Monitor</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AAA Batteries (4-pack)</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>iPhone</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Lightning Charging Cable</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         Meta Pred\n",
+       "Product                           \n",
+       "Flatscreen TV               1    1\n",
+       "Apple Airpods Headphones    1    1\n",
+       "20in Monitor                1    1\n",
+       "AAA Batteries (4-pack)      1    1\n",
+       "iPhone                      1    1\n",
+       "Lightning Charging Cable    1    1"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = prod.drop('Meta', 1)\n",
+    "y = prod['Meta']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3)\n",
+    "\n",
+    "lm = LogisticRegression()\n",
+    "lm.fit(X_train, y_train)\n",
+    "\n",
+    "pred = lm.predict(X_test)\n",
+    "\n",
+    "dis = pd.DataFrame(y_test)\n",
+    "dis['Pred'] = pred\n",
+    "\n",
+    "dis"
    ]
   }
  ],
